--- a/WebsiteProject/css/animations.css
+++ b/WebsiteProject/css/animations.css
@@ -16,7 +16,7 @@
 
 .menu li {
     color: #000;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: #66a3ff;
     display: inline-block;
     margin: 0% auto;
     position: relative;
@@ -32,8 +32,8 @@
 }
 
 .menu li:hover {
-    color: #f00;
-    background-color: rgba(100, 65, 0, 0, 0.3);
+    color: #fff;
+    background-color: #001f4d;
 }
 
 /*=============================
