--- a/WebsiteProject/css/shared.css
+++ b/WebsiteProject/css/shared.css
@@ -18,7 +18,7 @@ body{
     font-family: "Helvetica Neue", Arial, sans-serif;
     line-height: 1.42857143;
     color: #333;
-    background-color: #fff;
+    background-color: #001433;
 }
 
 footer,
@@ -46,7 +46,7 @@ h1::after {/*This is the underline*/
     height: 2px;
     width: 150px;
     background: #E91C1C;
-    margin: 5px auto 40px;
+    margin: 4px auto 40px;
     box-shadow: 5px 2px 3px rgba(0,0,0,0.5);
 }
 
@@ -143,7 +143,7 @@ any weird spacing or if some display is bugged*/
     width:100%;
     position: fixed;
     z-index: 100;
-    /*background-color: rgba(255,255,255,0.5);*/
+    background-color: rgba(102,163,255,0.5);
 }
 
 /******************************
@@ -151,19 +151,18 @@ HOME SECTION STYLES
 ******************************/
 
 #home{
-    background-image: url(../images/thumb/background.jpg) no-repeat;
+    background: url(../images/thumb/background.jpg) no-repeat 50% 50%;
     background-attachment: absolute;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-size: 500px 500px;
     width:100%;
     display: absolute;
     height: auto;
     padding-top: 350px; /* this is spacer before main title logo */
     padding-bottom: 500px; /* this is spacer after the main title logo*/
-    color: #fff;
+    color: #000d33;
 }
 
 
@@ -200,9 +199,9 @@ HOME SECTION STYLES
 /******************************
 GALLERY SECTION STYLES
 ******************************/
-#gallery{
+/*#gallery{
     height: 100%;
-}
+}*/
 
 
 /*=============================
@@ -216,12 +215,12 @@ GALLERY SECTION STYLES
     padding: 10px;
     border-radius:8px;
     margin: 0px auto;
-    background-color: rgba(100, 65, 0, .3);
+    background-color: rgba(0, 71, 179, .3);
     box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.5);
 }
 
 #contact{
-    background-color: #f5f3f3;
+    background-color: rgba(0,71,179, .3);
 }
 
 .reservation{
@@ -229,7 +228,7 @@ GALLERY SECTION STYLES
     padding: 10px;
     border-radius: 8px;
     margin: 0px auto;
-    background-color: rgba(100, 65, 0, .3);
+    background-color: #66a3ff;
     box-shadow: -1px -1px 1px 0 rgba(0,0,0,1), 1px 2px 10px 0 rgba(0,0,0,0.5);
 }
 
@@ -255,6 +254,18 @@ GALLERY SECTION STYLES
     word-spacing: .3pt;
 }
 
+.reservation h3 {
+    width: 70%;
+    text-align: center;
+    margin: 0 auto;
+    color: #E91C1C;
+    font-weight: 900;
+    font-size: 1.3em;
+    letter-spacing: .5pt;
+    word-spacing: 0pt;
+
+}
+
 .reservation p{
     width: 50%;
     margin: 0 auto;
@@ -271,7 +282,7 @@ GALLERY SECTION STYLES
     border: 1px solid #808080;
     padding: 12px 12px;
     border-radius: 7px;
-    background: rgba(227,222,222);
+    background: #002966;
     box-shadow: 2px 3px 3px 0px rgba(0,0,0,0.3);
     font-family: 'Raleway', sans-serif;
 }
@@ -282,7 +293,7 @@ GALLERY SECTION STYLES
     font-weight: 600;
     width: 80%;
     margin: 10px 1em;
-    color: #8d8e8f;
+    color: #fff;
     border-top: 1px solid #090B0D;
     border-right: 2px solid #424549;
     border-bottom: 2px solid #424549;
@@ -295,7 +306,7 @@ GALLERY SECTION STYLES
 }
 
 .reservation input[type="text"]:hover {
-    box-shadow: 0 0 19px rgba(100, 65, 0, .8);
+    box-shadow: 0 0 19px #66a3ff;
 }
 
 .form-spacer{
@@ -308,7 +319,7 @@ GALLERY SECTION STYLES
     margin-top: 13%;
     font-size: 14px;
     line-height: 5px;
-    color: #000;
+    color: #fff;
     cursor: pointer;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
@@ -323,7 +334,7 @@ GALLERY SECTION STYLES
 }
 
 .submit input[type="submit"]{
-    color: rgba(255,255,255);
+    color: #000;
     cursor: pointer;
     border: none;
     font-weight: 900;
@@ -336,13 +347,13 @@ GALLERY SECTION STYLES
     font-size:18px;
     transition: border-color 0.3s color .3s background-color .3s;
     border-radius: 7px;
-    background-color:#797a7b;
+    background-color:rgba(102, 163, 255, 0.5);
     box-shadow: 1px 1px 4px 0 rgba(0,0,0,0.3);
 }
 
 .submit input[type="submit"]:hover {
-    color: #000;
-    background-color: #8d8e8f;
+    color: #fff;
+    background-color: #001f4d;
     box-shadow: inset 1px 2px 15px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -352,7 +363,7 @@ GALLERY SECTION STYLES
 
 #footer{
     background-color: rgba(100, 65, 0, 0.3);
-    color:#000;
+    color:#fff;
     text-shadow: 2px 2px 8px 0 rgba(0,0,0,1);
     padding: 20px 50px 20px 50px;
     text-align: right;
