--- a/Academy-Cinemas/css/custom.css
+++ b/Academy-Cinemas/css/custom.css
@@ -301,3 +301,27 @@ other images on hte page and overrides the img type*/
     width: auto;
     height: 130px;
 }
+
+/*POPOVERS*/
+.star-rating{
+    width: 80%;
+}
+
+/*TOAST*/
+
+.custom-toast{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+/*Call-out*/
+.badge{
+    font-family: var(--main-font-family);
+    color: var(--accent-text-color);
+    font-size: 30px;
+    left: 0;
+    margin-top: -15px;
+}
